Mob-menu z-index fix

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -100,7 +100,7 @@
   position: fixed;
   background-color: #e17992;
   overflow: hidden;
-  z-index: 2;
+  z-index: 200;
   top: 0;
   left: 0;
   width: 100vw;
